--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My First Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia error cum repudiandae dolore ab. Accusantium odit, soluta eius aut eos eum rem perferendis vitae illo architecto labore quisquam! Labore, dolor.</p>
+    </div>
 </body>
 </html>
