--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h3>My First Website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia error cum repudiandae dolore ab. Accusantium odit, soluta eius aut eos eum rem perferendis vitae illo architecto labore quisquam! Labore, dolor.</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
